# cyrax

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  OVERHAUL_PLAN.md  cyrax.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  release-master-plan.md  requirements-dev.txt  requirements.txt  tsconfig.json
.github/workflows/: ci.yml  tests.yml
agents/: __init__.py  ad_agent.py  agent_pool.py  base_agent.py  cloud_agent.py  exploit_agent.py  ipc.py  osint_agent.py  post_exploit_agent.py  process_runner.py  recon_agent.py  web_agent.py
config/: __init__.py  config.example.yaml
config/prompts/: orchestrator.txt
daemon/: __init__.py  gateway.py  heartbeat.py
memory/: __init__.py  campaign_state.py  conversation.py  knowledge_base.py  mission_memory.py
models/: __init__.py  api_providers.py  local_providers.py  model_manager.py
recovery/: __init__.py  engine.py
reports/: MILESTONE_TRACKER.md
reports/benchmarks/: B20260221_182849.json  B20260221_182855.json
reports/gates/: M00.json  M00.md  M01.json  M01.md  M02.json  M02.md  M03.json  M03.md  M04.json  M04.md  M05.json  M05.md  M06.json  M06.md  M07.json  M07.md  M08.json  M08.md  M09.json  M09.md  M10.json  M10.md  M11.json  M11.md  M12.json  M12.md  gate_schema.json  gate_template.md
scripts/: benchmark.py  bootstrap.bat  bootstrap.sh  preflight.py  release_check.py  run_gate.py
skills/: __init__.py  manager.py
src/: cli.ts  index.ts  orchestrator.ts
src/agents/: base.ts  pool.ts
src/config/: defaults.ts  loader.ts
src/memory/: campaign.ts  conversation.ts  knowledge.ts  mission.ts
src/models/: client.ts
src/tools/: browser.ts  executor.ts  registry.ts
src/types/: common.ts
src/utils/: actions.ts  display.ts  logger.ts  platform.ts  safety.ts
tests/: __init__.py  test_action_parsing.py  test_autonomy_upgrade.py  test_cli_ux.py  test_display_streaming.py  test_echo_guard.py  test_executor_paths.py  test_executor_windows_compat.py  test_ipc.py  test_m03_runtime_fixes.py  test_m04_executor_robustness.py  test_m05_browser_reliability.py  test_m06_multi_agent_resilience.py  test_m07_orchestrator_reliability.py  test_m08_evidence_integrity.py  test_m09_safety_governance.py  test_m10_benchmark_harness.py  test_m11_productization.py  test_orchestrator_integration.py  test_permission_gate.py  test_safety.py  test_scope_dynamic.py  test_scope_wrapped_commands.py  test_ui_app_turn_loop.py
tests/ts/: actions.test.ts  cli-orchestrator.test.ts  display.test.ts  executor.test.ts  memory-config.test.ts  orchestrator-actions.test.ts  safety.test.ts
tools/: __init__.py  bootstrap.py  browser.py  executor.py  tool_registry.py
ui/: __init__.py  app.py
utils/: __init__.py  display.py  logging.py  platform_info.py  safety.py  tmux.py
(+1 files in other folders)
